--- a/roadmap-component/package.json
+++ b/roadmap-component/package.json
@@ -1,22 +1,7 @@
 {
   "name": "roadmap-component",
-  "version": "1.0.0",
-  "description": "A reusable roadmap component for displaying a product roadmap on your website",
-  "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "babel src -d dist",
-    "prepublishOnly": "npm run build"
-  },
-  "keywords": [
-    "react",
-    "roadmap",
-    "component"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -30,6 +15,12 @@
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "tailwind.config.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
